--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,31 @@
 unbind C-b
 set -g prefix C-a
 set-window-option -g mode-keys vi
+
+# Automatically set window title
+setw -g automatic-rename
+
+# Highlight active window
+set-window-option -g window-status-current-bg red
+
+# Vim binding for screen splitting
+unbind %
+bind s split-window -v
+bind v split-window -h
+
+# use the vim motion keys to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# use the vim resize keys.
+# the number at the end is how much the pane will be resized,
+# and 1 is fairly small -- you might want to tweak this.
+bind < resize-pane -L 1
+bind > resize-pane -R 1
+bind - resize-pane -D 1
+bind + resize-pane -U 1
+
+# C-a C-a to switch between current and last window
+bind C-a last-window
