--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
+# Switch from C-b to C-a (screen-like commands)
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
+
 set-window-option -g mode-keys vi
 
 # Automatically set window title
