Added notificatons for tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,12 +5,6 @@ bind a send-prefix
 
 set-window-option -g mode-keys vi
 
-# Automatically set window title
-setw -g automatic-rename
-
-# Highlight active window
-set-window-option -g window-status-current-bg red
-
 # Vim binding for screen splitting
 unbind %
 bind s split-window -v
@@ -32,3 +26,13 @@ bind + resize-pane -U 1
 
 # C-a C-a to switch between current and last window
 bind C-a last-window
+
+# notifications
+setw -g monitor-activity on
+setw -g visual-activity on
+
+# Highlight active window
+set-window-option -g window-status-current-bg red
+
+# Automatically set window title
+setw -g automatic-rename on
