New file: .inputrc to set vi mode for all readline-enabled apps.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
 /*
-/bin/*
-/.xmonad/*
-/.vim/.netrwhist
-!/.xmonad/
-!/.xmonad/xmonad.hs
-!/.gitignore
-!/.vimrc
 !/.bashrc
+!/bin
+/bin/*
 !/bin/dpass
 !/bin/xquit
-!/.screenrc
-!/bin
-!/.xinitrc
+!/.gitignore
+!/.inputrc
 !/.profile
-!/.xmodmaprc
+!/.screenrc
 !/.tmux.conf
 !/.vim/
+/.vim/.netrwhist
+!/.vimrc
+!/.xinitrc
+!/.xmodmaprc
+!/.xmonad/
+/.xmonad/*
+!/.xmonad/xmonad.hs
 !/.xprofile
