Have a more vim-like copy-paste.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,8 @@ set-window-option -g window-status-current-bg red
 
 # Automatically set window title
 setw -g automatic-rename on
+
+# Use vim-like keys for copying
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind P paste-buffer
