Better tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,12 @@ setw -g automatic-rename on
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 bind P paste-buffer
+
+# Right-hand side of the status bar
+set -g status-right '#(whoami)@#H %Y-%m-%d %H:%M'
+set -g status-right-length 80
+
+# Left-hand side of the status bar. window.pane
+set -g status-left '[#I.#P]'
+
+source ~/.local.conf/.tmux.conf
