Longer left status for tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,5 +48,6 @@ set -g status-right-length 80
 
 # Left-hand side of the status bar. window.pane
 set -g status-left '[#I.#P]'
+set -g status-left-length 80
 
 source ~/.local.conf/.tmux.conf
