--- a/.i3/config
+++ b/.i3/config
@@ -10,6 +10,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
+force_xinerama yes
 
 # Startup the gnome network manager applet
 exec --no-startup-id nm-applet
@@ -155,5 +156,5 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        #status_command i3status
 }
