--- a/.i3/config
+++ b/.i3/config
@@ -82,6 +82,8 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindcode $mod+d focus child
 
+
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -152,6 +154,8 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+exec_always feh --bg-scale ~/Pictures/wallpaper.jpg
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
