Mostly some qemu-related stuff.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,4 +50,10 @@ set -g status-right-length 80
 set -g status-left '[#I.#P]'
 set -g status-left-length 80
 
+bind-key = select-layout even-vertical
+
+bind-key e source ~/.tmux.conf
+
 source ~/.local.conf/.tmux.conf
+# Command to kill qemu in the current window.
+bind m send-keys C-a x
