--- a/.i3/config
+++ b/.i3/config
@@ -15,7 +15,7 @@ force_xinerama yes
 # Startup the gnome network manager applet
 exec --no-startup-id nm-applet
 
-bindsym Control+$mod+l exec i3lock
+bindsym Control+$mod+l exec i3lock --color=111111
 
 # font for window titles. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -156,6 +156,8 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 exec_always feh --bg-scale ~/Pictures/wallpaper.jpg
+
+for_window [class="qemu-system-x86_64" instance="qemu-system-x86_64"] floating enable
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
