--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,9 @@ set-window-option -g mode-keys vi
 
 # Vim binding for screen splitting
 unbind %
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # use the vim motion keys to move between panes
 bind h select-pane -L
@@ -38,8 +39,8 @@ set-window-option -g window-status-current-bg red
 setw -g automatic-rename on
 
 # Use vim-like keys for copying
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
 bind P paste-buffer
 
 # Right-hand side of the status bar
