Update tmux config for new options.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ setw -g monitor-activity on
 setw -g visual-activity on
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 
 # Automatically set window title
 setw -g automatic-rename on
