Update python context vim script for python3.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Switch from C-b to C-a (screen-like commands)
-unbind C-b
-set -g prefix C-a
+#unbind C-b
+#set -g prefix C-a
 bind a send-prefix
 
 set-window-option -g mode-keys vi
