--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,18 @@
 	path = .emacs.d/evil
 	url = https://github.com/emacs-evil/evil.git
 	branch = release-1.2
+[submodule ".emacs.d/lean-mode"]
+	path = .emacs.d/lean-mode
+	url = https://github.com/leanprover/lean-mode.git
+[submodule ".emacs.d/dash"]
+	path = .emacs.d/dash
+	url = https://github.com/magnars/dash.el.git
+[submodule ".emacs.d/f"]
+	path = .emacs.d/f
+	url = https://github.com/rejeep/f.el.git
+[submodule ".emacs.d/flycheck"]
+	path = .emacs.d/flycheck
+	url = https://github.com/flycheck/flycheck.git
+[submodule ".emacs.d/s"]
+	path = .emacs.d/s
+	url = https://github.com/magnars/s.el.git
