--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 !/.emacs.d/evil
 !/.emacs.d/f
 !/.emacs.d/flycheck
+!/.emacs.d/fstar-mode
 !/.emacs.d/google-c-style
 !/.emacs.d/lean-mode
 !/.emacs.d/s
