[tmux] Enable 256 colors.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,4 +58,7 @@ bind-key e source ~/.tmux.conf
 # Command to kill qemu in the current window.
 bind m send-keys C-a x
 
+# Enable 256 colors
+set -g default-terminal "screen-256color"
+
 source ~/.local.conf/.tmux.conf
