--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/pack/plugins/start/vim-go"]
 	path = .vim/pack/plugins/start/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule ".vim/pack/coq/start/Coqtail"]
+	path = .vim/pack/coq/start/Coqtail
+	url = https://github.com/whonore/Coqtail.git
