[i3] Add support for screenshots.

--- a/.i3/config
+++ b/.i3/config
@@ -94,9 +94,17 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindcode $mod+d focus child
+# bindcode $mod+d focus child
 
+# Screenshots
+bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date --iso-8601=seconds)".png
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date --iso-8601=seconds)".png
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date --iso-8601=seconds)".png
 
+# Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
 # switch to workspace
 bindsym $mod+1 workspace 1
