[i3] Use brightness buttons to control brightness.

--- a/.i3/config
+++ b/.i3/config
@@ -135,6 +135,10 @@ bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #incr
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
+# Brightness controls
+bindsym XF86MonBrightnessDown exec brightness -0.1
+bindsym XF86MonBrightnessUp exec brightness +0.1
+
 # reload the configuration file
 bindsym $mod+Shift+C reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
