--- a/.i3/config
+++ b/.i3/config
@@ -15,6 +15,7 @@ force_xinerama yes
 # Startup the gnome network manager applet
 exec --no-startup-id nm-applet
 
+exec --no-startup-id $HOME/lib/set_resolution.py
 exec --no-startup-id $HOME/lib/x1-carbon-enable-gestures
 
 # Starts chrome and terminator on startup.
