Switch tmux to not start a login shell.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,4 +61,7 @@ bind m send-keys C-a x
 # Enable 256 colors
 set -g default-terminal "screen-256color"
 
+# Do not create a login shell.
+set -g default-command "${SHELL}"
+
 source ~/.local.conf/.tmux.conf
